@@ -1,3 +1,10 @@
+2014-01-05  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-sum.el (gnus-article-stop-animations): Declare it before using.
+	(nnimap-split-fancy, nnimap-split-methods): Declare.
+
+	* mm-util.el (help-function-arglist): Declare.
+
 2013-12-28  Glenn Morris  <rgm@gnu.org>
 
 	* gnus-sieve.el (gnus-sieve-select-method):
